--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+libdashel (1.0.3) lucid; urgency=low
+
+  * new upstream release
+
+ -- Stéphane Magnenat <stephane@nospam.magnenat.net>  Mon, 11 Oct 2010 17:24:56 +0200
+
 libdashel (0.1) unstable; urgency=low
 
   * Initial release.
