--- a/debian/changelog
+++ b/debian/changelog
@@ -1,4 +1,10 @@
-libdashel (1.0.3) lucid; urgency=low
+libdashel (1.0.4-1) natty; urgency=low
+
+  * new upstream release
+
+ -- Stéphane Magnenat <stephane@nospam.magnenat.net>  Wed, 04 May 2011 11:19:58 +0200
+
+libdashel (1.0.3-1) lucid; urgency=low
 
   * new upstream release
 
