Mechanism to add new stream types at run time

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+libdashel (1.0.5) precise; urgency=low
+
+  * new upstream release
+
+ -- Stéphane Magnenat <stephane@nospam.magnenat.net>  Mon, 17 Sep 2012 14:32:22 +0200
+
 libdashel (1.0.4-1) natty; urgency=low
 
   * new upstream release
