--- a/changelog
+++ b/changelog
@@ -1,3 +1,11 @@
-2021-09-17, version 1.0.5:
+2013-07-02, version 1.0.7
+
+	* Added locking to Hub on Win32
+
+2013-04-22, version 1.0.6
+
+	* Added locking to serial ports on posix
+
+2012-09-17, version 1.0.5:
 
 	* Mechanism to add new stream types at run time
