--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+libdashel (1.0.7) precise; urgency=low
+
+  * new upstream release
+
+ -- StÃÂ©phane Magnenat <stephane@nospam.magnenat.net>  Tue, 02 Jul 2013 09:45:31 +0200
+
 libdashel (1.0.6) precise; urgency=low
 
   * new upstream release
