--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+libdashel (1.1.0) trusty; urgency=medium
+
+  * new upstream release
+
+ -- Stéphane Magnenat <stephane@nospam.magnenat.net>  Thu, 19 Nov 2015 16:29:50 +0100
+
 libdashel (1.0.9) trusty; urgency=medium
 
   * new upstream release
