--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+libdashel (1.3.0) xenial; urgency=medium
+
+  * new upstream release
+
+ -- Stéphane Magnenat <stephane@nospam.magnenat.net>  Fri, 10 Mar 2017 16:31:46 +0100
+
 libdashel (1.1.0) trusty; urgency=medium
 
   * new upstream release
