--- a/changelog
+++ b/changelog
@@ -1,3 +1,18 @@
+2017-03-13, version 1.3.0
+
+	* Added support for dynamically-allocated server ports
+	* Added new target type "poll" to only poll a stream for activity
+	* Added Jenkinsfile
+
+2015-11-19, version 1.1.0
+
+	* Added proper DTR enable/disable support
+	* Added HTTP/1.0 web server as example
+
+2014-98-25, version 1.0.8
+
+	* Added generation of dashelConfig.cmake
+
 2013-07-02, version 1.0.7
 
 	* Added locking to Hub on Win32
