--- a/changelog
+++ b/changelog
@@ -1,3 +1,7 @@
+2017-07-06, version 1.3.1
+
+	* Added work-around for lack of serial disconnection support on Windows 10
+
 2017-03-13, version 1.3.0
 
 	* Added support for dynamically-allocated server ports
